--- a/content/post/2021-02-26-liftover-genome-version/index.zh-cn.Rmd
+++ b/content/post/2021-02-26-liftover-genome-version/index.zh-cn.Rmd
@@ -8,7 +8,7 @@ categories:
   - skills
 tags:
   - bioinformatics
-image : "liftover.png"
+image : "liftover1.png"
 ---
 
 ```{r setup, include=FALSE,eval=TRUE}
